2010-02-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Cameron Zwarich.

        Restore ENABLE_RUBY flag so vendors can ship with Ruby disabled if they choose.
        https://bugs.webkit.org/show_bug.cgi?id=34698

        * Scripts/build-webkit:

2010-02-10  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        Fix various minor bugs keeping run-chromium-webkit-tests from actually
        working on the linux and win ports of Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=34739

        * Scripts/webkitpy/layout_tests/layout_package/test_shell_thread.py:
        * Scripts/webkitpy/layout_tests/port/__init__.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win.py:
        * Scripts/webkitpy/layout_tests/port/http_server.py:
        * Scripts/webkitpy/layout_tests/port/websocket_server.py:

2010-02-10  Eric Seidel  <eric@webkit.org>

        Reviewed by David Levin.

        run-chromium-webkit-tests --platform=mac-leopard crashes when using a custom build directory
        https://bugs.webkit.org/show_bug.cgi?id=34817

        This doesn't fix the root cause of us not
        correctly failing when support binaries are missing.
        This only causes the DumpRenderTree binary not to be
        missing in the custom build directory case.
        Later patches will make us correctly fail fast when
        support binaries (like DumpRenderTree or ImageDiff) are missing.

        * Scripts/webkit-build-directory: Added.
         - Need a way to re-use the perl logic for finding build directories in non-perl scripts.
        * Scripts/webkitpy/layout_tests/port/base.py: Add a FIXME.
        * Scripts/webkitpy/layout_tests/port/mac.py:
         - Call webkit-build-directory to find the build directory instead of assuming "WebKitBuild"